--- a/src/assets/i18n/en_EN.json
+++ b/src/assets/i18n/en_EN.json
@@ -74,7 +74,8 @@
   },
   "examples": {
     "title": "Comparativa de códigos",
-    "result": "Resultado",
+    "result": "Ejemplo en directo",
+    "performance": "Tiempo de renderizado",
     "description": "<p>En esta sección vamos a realizar una comparativa de código de estas tres tecnologías. Mostraremos cómo obtener los datos de algunos futbolistas, visualizarlos en pantalla y utilizar parte de esta información para generar una gráfica.</p>",
     "alert": "Es importante destacar que son ejemplos básicos con fines didácticos, por lo que no se incluyen algunas características esenciales en una aplicación real, ni se profundiza en los componentes utilizados para visualizar la información. Este tutorial se centra específicamente en los cambios de estado de nuestros modelos de datos.",
     "signal": {
@@ -83,6 +84,10 @@
     },
     "rxjs": {
       "title": "Observables RxJS",
+      "description": "<p>En el método ngOnInit de nuestro componente se invoca el servicio encargado de recuperar los datos de los futbolistas. En la suscripción al servicio, dichos datos se almacenan en nuestra señal mediante el método set(). Además, en el constructor del componente se establece un effect que supervisa los cambios en la señal, de manera que, una vez la señal players disponga de la información necesaria, se ejecute el método createChartData(). Finalmente, en el template se itera sobre la señal players para renderizar el componente app-player, y se pasan los datos correspondientes al componente app-chart para generar la gráfica.</p>"
+    },
+    "ngrx": {
+      "title": "NgRx",
       "description": "<p>En el método ngOnInit de nuestro componente se invoca el servicio encargado de recuperar los datos de los futbolistas. En la suscripción al servicio, dichos datos se almacenan en nuestra señal mediante el método set(). Además, en el constructor del componente se establece un effect que supervisa los cambios en la señal, de manera que, una vez la señal players disponga de la información necesaria, se ejecute el método createChartData(). Finalmente, en el template se itera sobre la señal players para renderizar el componente app-player, y se pasan los datos correspondientes al componente app-chart para generar la gráfica.</p>"
     }
   }
