--- a/src/assets/i18n/en_EN.json
+++ b/src/assets/i18n/en_EN.json
@@ -49,9 +49,15 @@
     },
     "strategyChange": {
       "title": "Estrategia de cambio",
-      "signals": "<span class='text-success'>Automática y eficiente</span>",
-      "rxjs": "<span class='text-warning'>Manual con .next()</span>",
-      "ngrx": "<span class='text-warning'>Basada en Redux (acciones, reducers y efectos)</span>"
+      "signals": "Mediante .set() y .update()",
+      "rxjs": "Mediante .next()</span>",
+      "ngrx": "Basada en Redux (acciones, reducers y efectos)"
+    },
+    "unsubscribe": {
+      "title": "Requiere Desuscripción",
+      "signals": "<span class='text-success'>No</span>",
+      "rxjs": "<span class='text-danger'>Si</span>",
+      "ngrx": "<span class='text-danger'>Si con observables</span>, <span class='text-success'>No con Signals (Angular 17)</span>"
     },
     "debug": {
       "title": "Depuración",
@@ -61,9 +67,9 @@
     },
     "appTypes": {
       "title": "Adecuado para",
-      "signals": "(Apps pequeñas, medianas y micro-fronts) >= Angular 16",
-      "rxjs": "(Apps pequeñas, medianas y micro-fronts) < Angular 16",
-      "ngrx": "Aplicaciones monolíticas grandes"
+      "signals": "Apps pequeñas, medianas y micro-fronts",
+      "rxjs": "Apps pequeñas, medianas y micro-fronts",
+      "ngrx": "Aplicaciones monolíticas grandes o micro-fronts con store propio"
     },
     "compatibility": {
       "title": "Compatibilidad",
