--- a/docs/assets/i18n/es_ES.json
+++ b/docs/assets/i18n/es_ES.json
@@ -58,7 +58,7 @@
     "strategyChange": {
       "title": "Estrategia de cambio",
       "signals": "Mediante .set() y .update()",
-      "rxjs": "Mediante .next()</span>",
+      "rxjs": "Mediante .next()",
       "ngrx": "Basada en Redux (acciones, reducers y efectos)"
     },
     "unsubscribe": {
