--- a/src/assets/i18n/en_EN.json
+++ b/src/assets/i18n/en_EN.json
@@ -58,7 +58,7 @@
     "strategyChange": {
       "title": "Change strategy",
       "signals": "Via .set() and .update()",
-      "rxjs": "Via .next()</span>",
+      "rxjs": "Via .next()",
       "ngrx": "Based on Redux (actions, reducers, and effects)"
     },
     "unsubscribe": {
